# RayTracer

./: CMakeLists.txt  README.md
Scripts/: WinGenProjects.bat
Source/: Camera.hpp  Hitable.hpp  HitableList.hpp  Random.hpp  Ray.hpp  Sphere.hpp  main.cpp
